--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   padding: 0;
   font-family: 'Open Sans', sans-serif;
   background: #21181B;
-  background-image: url('./images/pixel_tv.jpg');
+  background-image: url('../images/pixel_tv.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: auto 60vh;
