--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,13 @@
 }
 
 body {
+  margin: 0;
+  padding: 0;
+  background: #21181B;
+}
+
+/*
+body {
   padding: 0;
   font-family: 'Open Sans', sans-serif;
   background: #21181B;
@@ -18,6 +25,7 @@ body {
   color: #f5efce;
   overflow-x: hidden;
 }
+*/
 
 /* index.css 또는 App.css */
 /*
