--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -1,7 +1,7 @@
 .home-bg {
     font-family: 'Open Sans', sans-serif;
     background: #21181B;
-    background-image: url('../images/pixel_gameboy.jpg');
+    background-image: url('../tongstar-blog/images/pixel_gameboy.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: auto 60vh;
