--- a/src/components/learn/Learn.module.css
+++ b/src/components/learn/Learn.module.css
@@ -9,74 +9,34 @@
     color: #f5efce;
     overflow-x: hidden;
     min-height: 100vh;
+    display: grid;
+    grid-template-columns: 20% 80%;
 }
 
-.app {
-    position: relative;
-    height: 100vh;
-    overflow: hidden;
+.title-box {
+    display: flex;
+    justify-content: center;
+    border: 1px solid black;
+    /*margin: 1px;*/
+    /* padding: 10px; */
+    gap: 1vh;
+    height: 9vh;
 }
 
-.toggle-button {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    z-index: 1100;
-    padding: 10px 15px;
+.category-menu {
+    background: transparent;
+    /* width: 50vh; */
+    /* height: 100%; */
+    font-size: 1.5vh;
+    /* border: 1px solid #dee3eb; */
+    text-align: center;
 }
 
-.sidebar {
-    position: fixed;
-    top: 0;
-    left: -250px;
-    /* 숨겨진 상태 */
-    width: 250px;
-    height: 100%;
-    background-color: #222;
-    color: white;
-    padding: 20px;
-    transition: left 0.3s ease-in-out;
-    z-index: 1000;
-}
-
-.sidebar.open {
-    left: 0;
-}
-
-.content {
-    margin-left: 0;
-    padding: 60px 20px;
-}
-
-.dropdown {
-    margin-top: 20px;
-}
-
-.dropdown-toggle {
-    background: #444;
-    color: white;
-    padding: 10px;
-    border: none;
-    width: 100%;
-    text-align: left;
-    cursor: pointer;
-}
-
-.dropdown-menu {
-    background-color: #333;
-    border: 1px solid #555;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    margin-top: 5px;
-}
-
-.dropdown-item {
-    padding: 10px;
-    cursor: pointer;
-    color: white;
-}
-
-.dropdown-item:hover {
-    background-color: #555;
+.content-grid {
+    background: transparent;
+    /* width: 50vh; */
+    /* height: 100%; */
+    font-size: 40px;
+    /* border: 1px solid #dee3eb; */
+    text-align: center;
 }
