--- a/src/components/learn/Learn.module.css
+++ b/src/components/learn/Learn.module.css
@@ -8,9 +8,10 @@
     background-attachment: fixed;
     color: #f5efce;
     overflow-x: hidden;
-    min-height: 100vh;
+    min-height: 80vh;
     display: grid;
     grid-template-columns: 20% 80%;
+    margin: 10vh 20vh 10vh 20vh;
 }
 
 .title-box {
@@ -27,8 +28,10 @@
     background: transparent;
     /* width: 50vh; */
     /* height: 100%; */
+    font-family: 'PixelFont';
     font-size: 1.5vh;
     /* border: 1px solid #dee3eb; */
+    border: 1px solid black;
     text-align: center;
 }
 
@@ -38,5 +41,26 @@
     /* height: 100%; */
     font-size: 40px;
     /* border: 1px solid #dee3eb; */
+    border: 1px solid black;
     text-align: center;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    /*다른 요소들보다 앞에 배치*/
+}
+
+.dropdown-content a {
+    display: block;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
