Add more dropdown logic

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,14 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: 'PixelArrowFont';
+  src: url('./fonts/PixArrows.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
 body {
   margin: 0;
   padding: 0;
