--- a/src/components/user_interface/dropdown/Dropdown.module.css
+++ b/src/components/user_interface/dropdown/Dropdown.module.css
@@ -3,16 +3,37 @@
     margin-left: 1rem;
 }
 
+.dropdown-button-container {
+    background: transparent;
+    display: flex;
+    justify-content: left;
+}
+
 .dropdown-button {
-    background-color: #e5e7eb;
-    /* gray-200 */
-    padding: 0.5rem;
-    border-radius: 0.25rem;
+    background: transparent;
+    font-family: 'PixelFont';
+    font-size: 1.3vh;
     cursor: pointer;
+    text-align: start;
+    opacity: 0.5;
+    transition: opacity 0.3s;
+    letter-spacing: 0.05em;
+    user-select: none;
+    -webkit-user-select: none;
+}
+
+.dropdown-flag-text {
+    padding-left: 1vh;
+    background: transparent;
+    font-family: 'PixelArrowFont';
+    font-size: 1.5vh;
+    user-select: none;
+    -webkit-user-select: none;
 }
 
 .dropdown-button:hover {
-    background-color: #d1d5db;
+    /* background-color: #d1d5db; */ 
+    opacity: 1;
 }
 
 .dropdown-content {
