Update pixelated border logic

--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -21,6 +21,42 @@
 }
 
 .home img {
+    clip-path: polygon(0px calc(100% - 25px),
+                5px calc(100% - 25px),
+                5px calc(100% - 15px),
+                10px calc(100% - 15px),
+                10px calc(100% - 10px),
+                15px calc(100% - 10px),
+                15px calc(100% - 5px),
+                25px calc(100% - 5px),
+                25px 100%,
+                calc(100% - 25px) 100%,
+                calc(100% - 25px) calc(100% - 5px),
+                calc(100% - 15px) calc(100% - 5px),
+                calc(100% - 15px) calc(100% - 10px),
+                calc(100% - 10px) calc(100% - 10px),
+                calc(100% - 10px) calc(100% - 15px),
+                calc(100% - 5px) calc(100% - 15px),
+                calc(100% - 5px) calc(100% - 25px),
+                100% calc(100% - 25px),
+                100% 25px,
+                calc(100% - 5px) 25px,
+                calc(100% - 5px) 15px,
+                calc(100% - 10px) 15px,
+                calc(100% - 10px) 10px,
+                calc(100% - 15px) 10px,
+                calc(100% - 15px) 5px,
+                calc(100% - 25px) 5px,
+                calc(100% - 25px) 0px,
+                25px 0px,
+                25px 5px,
+                15px 5px,
+                15px 10px,
+                10px 10px,
+                10px 15px,
+                5px 15px,
+                5px 25px,
+                0px 25px);
     width: auto;
     height: 12vh;
     margin-bottom: 0vh;
