--- a/src/components/learn/Learn.module.css
+++ b/src/components/learn/Learn.module.css
@@ -8,59 +8,41 @@
     background-attachment: fixed;
     color: #f5efce;
     overflow-x: hidden;
-    min-height: 90vh;
-    display: grid;
-    grid-template-columns: 25% 75%;
-    margin: 5vh 15vh 5vh 15vh;
-}
+    width: 100%;
+    height: 100vh;
 
-.title-box {
+    /*
     display: flex;
-    justify-content: center;
-    border: 1px solid black;
-    /*margin: 1px;*/
-    /* padding: 10px; */
-    gap: 1vh;
-    height: 9vh;
+    flex-direction: row;
+    align-items: flex-start;
+    */
+
+    /* display: grid; */
+    /*grid-template-columns: 25% 75%; */
+
+    /*
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    
+    margin: 5vh 15vh 5vh 15vh;
+    */
 }
 
-.category-menu {
-    background: transparent;
-    /* width: 50vh; */
-    /* height: 100%; */
+/* sticky area */
+.sidebar-container {
     font-family: 'PixelFont';
-    font-size: 1.5vh;
-    /* border: 1px solid #dee3eb; */
     border: 1px solid black;
-    text-align: center;
+    float: left;
+    width: 35vh;
+    height: 90vh;
+    position: sticky;
+    top: 5vh;
+    left: 15vh;
+    overflow-y: auto;
 }
 
-.content-grid {
-    background: transparent;
-    /* width: 50vh; */
-    /* height: 100%; */
+.post-container {
     font-size: 40px;
-    /* border: 1px solid #dee3eb; */
     border: 1px solid black;
-    text-align: center;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    z-index: 1;
-    /*다른 요소들보다 앞에 배치*/
-}
-
-.dropdown-content a {
-    display: block;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
 }
