--- a/src/components/user_interface/postgrid/PostGrid.module.css
+++ b/src/components/user_interface/postgrid/PostGrid.module.css
@@ -2,7 +2,8 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     gap: 20px;
-    padding: 20px;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
 }
 
 .card {
