--- a/src/components/learn/Learn.module.css
+++ b/src/components/learn/Learn.module.css
@@ -11,11 +11,11 @@
     width: 100%;
     height: 100vh;
 
-    /*
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    */
+    margin-left: 15vh;
+    margin-right: 15vh;
 
     /* display: grid; */
     /*grid-template-columns: 25% 75%; */
@@ -33,12 +33,11 @@
 .sidebar-container {
     font-family: 'PixelFont';
     border: 1px solid black;
-    float: left;
+    /*float: left;*/
     width: 35vh;
     height: 90vh;
     position: sticky;
     top: 5vh;
-    left: 15vh;
     overflow-y: auto;
 }
 
