--- a/src/components/learn/Learn.module.css
+++ b/src/components/learn/Learn.module.css
@@ -15,20 +15,22 @@
     flex-direction: row;
     justify-content: space-between;
 
-    /* align-items: flex-start; */
-    /* margin-left: 15vh; */
-    /* margin-right: 15vh; */
-
-    /* display: grid; */
-    /*grid-template-columns: 25% 75%; */
-
-    /*
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
+    &::-webkit-scrollbar {
+        width: 8px;
+    }
     
-    margin: 5vh 15vh 5vh 15vh;
-    */
+    /* scrollbar stick */
+    &::-webkit-scrollbar-thumb {
+        background-color: #f5efce;
+        border-radius: 10px;
+        /* border: 7px solid rgba(13, 156, 109, 0.8); */
+        min-height: 50px;
+    }
+    
+    /* scrollbar background */
+    &::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
 }
 
 .sidebar-container {
@@ -38,8 +40,52 @@
     height: 90vh;
     position: sticky;
     top: 5vh;
-    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
     /* border: 1px solid rgb(240, 81, 81); */
+}
+
+.dropdown-container {
+    direction: rtl;
+    overflow-y: scroll; 
+
+    &::-webkit-scrollbar {
+        width: 3px;
+    }
+    
+    /* scrollbar stick */
+    &::-webkit-scrollbar-thumb {
+        background-color: transparent;
+        border-radius: 10px;
+        /* border: 7px solid rgba(13, 156, 109, 0.8); */
+        min-height: 50px;
+    }
+    
+    /* scrollbar background */
+    &::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
+}
+
+.dropdown-container:hover {
+    overflow-y: scroll; 
+
+    &::-webkit-scrollbar {
+        width: 3px;
+    }
+    
+    /* scrollbar stick */
+    &::-webkit-scrollbar-thumb {
+        background-color: #f5efce;
+        /* border-radius: 10px; */
+        /* border: 7px solid rgba(13, 156, 109, 0.8); */
+        min-height: 50px;
+    }
+    
+    /* scrollbar background */
+    &::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
 }
 
 .post-container {
