--- a/src/components/user_interface/postgrid/PostGrid.module.css
+++ b/src/components/user_interface/postgrid/PostGrid.module.css
@@ -1,7 +1,7 @@
 .grid-container {
     display: grid;
-    /* grid-template-columns: repeat(auto-fill, minmax(260px, 1fr)); */
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(35vh, 1fr));
+    /* grid-template-columns: repeat(3, 1fr); */
     gap: 2.5vh;
     padding-bottom: 5vh;
 }
