--- a/src/components/learn/post_grid_view/PostGridView.module.css
+++ b/src/components/learn/post_grid_view/PostGridView.module.css
@@ -4,3 +4,88 @@
     font-size: 3.5vh;
     text-align: center;
 }
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(35vh, 1fr));
+    /* grid-template-columns: repeat(3, 1fr); */
+    gap: 2.5vh;
+    padding-bottom: 5vh;
+}
+
+.card {
+    background-color: white;
+    /* border: 1px solid #ddd; */
+    /* border-radius: 12px; */
+    clip-path: polygon(0px calc(100% - 25px),
+            5px calc(100% - 25px),
+            5px calc(100% - 15px),
+            10px calc(100% - 15px),
+            10px calc(100% - 10px),
+            15px calc(100% - 10px),
+            15px calc(100% - 5px),
+            25px calc(100% - 5px),
+            25px 100%,
+            calc(100% - 25px) 100%,
+            calc(100% - 25px) calc(100% - 5px),
+            calc(100% - 15px) calc(100% - 5px),
+            calc(100% - 15px) calc(100% - 10px),
+            calc(100% - 10px) calc(100% - 10px),
+            calc(100% - 10px) calc(100% - 15px),
+            calc(100% - 5px) calc(100% - 15px),
+            calc(100% - 5px) calc(100% - 25px),
+            100% calc(100% - 25px),
+            100% 25px,
+            calc(100% - 5px) 25px,
+            calc(100% - 5px) 15px,
+            calc(100% - 10px) 15px,
+            calc(100% - 10px) 10px,
+            calc(100% - 15px) 10px,
+            calc(100% - 15px) 5px,
+            calc(100% - 25px) 5px,
+            calc(100% - 25px) 0px,
+            25px 0px,
+            25px 5px,
+            15px 5px,
+            15px 10px,
+            10px 10px,
+            10px 15px,
+            5px 15px,
+            5px 25px,
+            0px 25px);
+    overflow: hidden;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+    transition: transform 0.2s ease;
+    height: 25.5vh;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+}
+
+.card-thumbnail {
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
+}
+
+.card-content {
+    padding: 16px;
+}
+
+.card-title {
+    font-size: 1.1rem;
+    font-weight: bold;
+    margin: 0 0 8px 0;
+}
+
+.card-summary {
+    font-size: 0.95rem;
+    color: #444;
+    margin-bottom: 12px;
+}
+
+.card-date {
+    font-size: 0.8rem;
+    color: #888;
+}
